--- a/gb/19/8/9/n11441833.md
+++ b/gb/19/8/9/n11441833.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jmzkba221/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jmzkba221/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jmzkba221/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jmzkba221/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>108年产销履历达人出炉 云林三人获选</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>2019年产销履历达人出炉 云林三人获选</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/396329-600x400.jpg" />
-<h6>荣获108年度产销履历达人，来自东势乡的黄志伟。（云林县府提供）
+<h6>荣获2019年度产销履历达人，来自东势乡的黄志伟。（云林县府提供）
 </h6>
 <hr>
-<p>【大纪元2019年08月09日讯】（大纪元记者廖素贞综合报导）行政院农业委员会108年度<ahref="https://github.com/jmzkba221/djy/blob/master/gb/tag/%E4%BA%A7%E9%94%80%E5%B1%A5%E5%8E%86.md#1">产销履历</a>达人征选结果出炉，经由各产业机关代表与业界专家组成的评审团队，历经3轮严谨评核，从全国95位参选农友里评选出15位优秀菁英！其中3位来自云林县。</p>
-<p>15位菁英包含农粮领域9位、水产领域3位及畜禽领域3位，当选为本年度<ahref="https://github.com/jmzkba221/djy/blob/master/gb/tag/%E4%BA%A7%E9%94%80%E5%B1%A5%E5%8E%86.md#1">产销履历</a>达人，其中3位获奖者来自云林县，分别是东势乡的黄志伟、西螺镇的蔡财兴及台西乡的李宗灿，以优异品质及产销履历实绩，从全国农、渔、畜业者中脱颖而出。</p>
-<p>来自东势乡的黄志伟在获得第四届百大青农的殊荣后再度荣获108年度农粮类产销履历达人，当初会投入农业是为考量双亲年纪大，照顾不便，因此，黄志伟毅然决然放弃台北的好工作，返乡务农，因看好温室栽种的前景，且不伤害土地，决定投入此一行列，选择走自创“牛埔头蔬活农场”品牌和产销履历认证的辛苦路。</p>
+<p>【大纪元2019年08月09日讯】（大纪元记者廖素贞综合报导）行政院农业委员会2019年度<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%A7%E9%94%80%E5%B1%A5%E5%8E%86.md#1">产销履历</a>达人征选结果出炉，经由各产业机关代表与业界专家组成的评审团队，历经3轮严谨评核，从全国95位参选农友里评选出15位优秀菁英！其中3位来自云林县。</p>
+<p>15位菁英包含农粮领域9位、水产领域3位及畜禽领域3位，当选为本年度<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%A7%E9%94%80%E5%B1%A5%E5%8E%86.md#1">产销履历</a>达人，其中3位获奖者来自云林县，分别是东势乡的黄志伟、西螺镇的蔡财兴及台西乡的李宗灿，以优异品质及产销履历实绩，从全国农、渔、畜业者中脱颖而出。</p>
+<p>来自东势乡的黄志伟在获得第四届百大青农的殊荣后再度荣获2019年度农粮类产销履历达人，当初会投入农业是为考量双亲年纪大，照顾不便，因此，黄志伟毅然决然放弃台北的好工作，返乡务农，因看好温室栽种的前景，且不伤害土地，决定投入此一行列，选择走自创“牛埔头蔬活农场”品牌和产销履历认证的辛苦路。</p>
 <p>黄志伟说要栽植出品质优良的绿芦笋，水分掌握是关键，水太少、笋不嫩；水太多、根易烂，绿芦笋通常在清晨采收，一收成立刻分级、修剪整齐，经过一天冷藏后便可送货，黄志伟也与全联合作，从初期6家到目前18家，销量稳定成长，今年更进军到台北花博农民市集展售绿芦笋，也获得相当不错的成绩。</p>
-<p>而来自西螺镇的蔡财兴也同样荣获108年度农粮类产销履历达人，原来经营汽车装潢生意的他成立了“将军企业社”，后来投入社区文史工作与农业，企业社也顺势成为农产行，他则成为西螺农民口中的“黑豆将军”，转职初期，他孜孜不倦地到云林县政府农民大学、台南区农业改良场上课，获得种植黑豆的专业知识，自许为西螺黑豆推手的蔡财兴，用纪录片《不老骑士》的傻子精神，带着一群西螺“不老农民”种黑豆，带动西螺镇黑豆复兴运动。</p>
-<figure id="attachment_11442188" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/396328.jpg"><img class=" wp-image-11442188" src="https://i.epochtimes.com/assets/uploads/2019/08/396328.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">自许为西螺黑豆推手的蔡财兴，荣获108年度产销履历达人。（云林县府提供）</figcaption></figure>
-<figure id="attachment_11442879" style="width: 533px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/396427.jpg"><img class="size-medium_vertical wp-image-11442879" src="https://i.epochtimes.com/assets/uploads/2019/08/396427-533x400.jpg" alt="" width="533" b="400" /></a><figcaption class="wp-caption-text">自许为西螺黑豆推手的蔡财兴，用纪录片《不老骑士》的傻子精神，带着一群西螺“不老农民”种黑豆，带动西螺镇黑豆复兴运动，让失去的黑豆再次在家乡出现。（蔡财兴提供）</figcaption></figure>
+<p>而来自西螺镇的蔡财兴也同样荣获2019年度农粮类产销履历达人，原来经营汽车装潢生意的他成立了“将军企业社”，后来投入社区文史工作与农业，企业社也顺势成为农产行，他则成为西螺农民口中的“黑豆将军”，转职初期，他孜孜不倦地到云林县政府农民大学、台南区农业改良场上课，获得种植黑豆的专业知识，自许为西螺黑豆推手的蔡财兴，用纪录片《不老骑士》的傻子精神，带着一群西螺“不老农民”种黑豆，带动西螺镇黑豆复兴运动。</p>
+<figure id="attachment_11442188" aria-describedby="caption-attachment-11442188" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/396328.jpg"><img class=" wp-image-11442188" src="https://i.epochtimes.com/assets/uploads/2019/08/396328.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-11442188" class="wp-caption-text">自许为西螺黑豆推手的蔡财兴，荣获108年度产销履历达人。（云林县府提供）</figcaption></figure>
+<figure id="attachment_11442879" aria-describedby="caption-attachment-11442879" style="width: 533px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/396427.jpg"><img class="size-medium_vertical wp-image-11442879" src="https://i.epochtimes.com/assets/uploads/2019/08/396427-533x400.jpg" alt="" width="533" b="400" /></a><figcaption id="caption-attachment-11442879" class="wp-caption-text">自许为西螺黑豆推手的蔡财兴，用纪录片《不老骑士》的傻子精神，带着一群西螺“不老农民”种黑豆，带动西螺镇黑豆复兴运动，让失去的黑豆再次在家乡出现。（蔡财兴提供）</figcaption></figure>
 <p>让失去的黑豆再次在家乡出现，现在他的黑豆不仅成为了农委会指定的黑豆示范农场，并通过产销履历认证，没有农业残留，颗颗圆滚饱满，直径可到0.8公分，1公斤可卖到240元，比一般国产黑豆约160元的均价要高，而近几年来，由于黑豆养生概念十分流行，吸引不少农民也加入种植的行列，目前蔡财兴已经有20多名契作农民，一年合计可生产40～60公吨，产量居全台第二。</p>
-<p>在水产领域中，来自台西乡的李宗灿荣获108年度产销履历达人，曾于106年度获得全国模范渔民的他，在养殖过程中坚持环境友善，采低密度、科技化、无用药的自然生态养殖模式，并善用益生菌来改善养殖环境，将自身经验与科技、科学新观念结合，克服文蛤养殖产业之困境，他创立的“台西聚鲜”品牌，以“在地养殖，专卖在地”理念为号召，提升当地养殖产业品牌形象，吸引更多青年回乡养殖，带动渔村经济发展，建立文蛤养殖的新典范。</p>
-<figure id="attachment_11442190" style="width: 334px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/396330.jpg"><img class=" wp-image-11442190" src="https://i.epochtimes.com/assets/uploads/2019/08/396330-267x400.jpg" alt="" width="334" b="500" /></a><figcaption class="wp-caption-text">在水产领域中，来自台西乡的李宗灿荣获108年度产销履历达人。（云林县府提供）</figcaption></figure>
+<p>在水产领域中，来自台西乡的李宗灿荣获2019年度产销履历达人，曾于2017年度获得全国模范渔民的他，在养殖过程中坚持环境友善，采低密度、科技化、无用药的自然生态养殖模式，并善用益生菌来改善养殖环境，将自身经验与科技、科学新观念结合，克服文蛤养殖产业之困境，他创立的“台西聚鲜”品牌，以“在地养殖，专卖在地”理念为号召，提升当地养殖产业品牌形象，吸引更多青年回乡养殖，带动渔村经济发展，建立文蛤养殖的新典范。</p>
+<figure id="attachment_11442190" aria-describedby="caption-attachment-11442190" style="width: 334px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/396330.jpg"><img class=" wp-image-11442190" src="https://i.epochtimes.com/assets/uploads/2019/08/396330-267x400.jpg" alt="" width="334" b="500" /></a><figcaption id="caption-attachment-11442190" class="wp-caption-text">在水产领域中，来自台西乡的李宗灿荣获108年度产销履历达人。（云林县府提供）</figcaption></figure>
 <p>李宗灿也于本年度通过云林县政府农产品安全管理“金标章验证”，成为水产养殖金标章第一人，在产销履历验证及金标章双认证下，文蛤品质更有保障。</p>
-<figure id="attachment_11442881" style="width: 333px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/396335.jpg"><img class=" wp-image-11442881" src="https://i.epochtimes.com/assets/uploads/2019/08/396335-267x400.jpg" alt="" width="333" b="499" /></a><figcaption class="wp-caption-text">在台北希望广场推广文蛤的李宗灿。（李宗灿提供）</figcaption></figure>
-<figure id="attachment_11442883" style="width: 334px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/396336.jpg"><img class=" wp-image-11442883" src="https://i.epochtimes.com/assets/uploads/2019/08/396336-267x400.jpg" alt="" width="334" b="500" /></a><figcaption class="wp-caption-text">渔民正忙着为经过清洗的文蛤装袋 。（李宗灿提供）</figcaption></figure>
+<figure id="attachment_11442881" aria-describedby="caption-attachment-11442881" style="width: 333px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/396335.jpg"><img class=" wp-image-11442881" src="https://i.epochtimes.com/assets/uploads/2019/08/396335-267x400.jpg" alt="" width="333" b="499" /></a><figcaption id="caption-attachment-11442881" class="wp-caption-text">在台北希望广场推广文蛤的李宗灿。（李宗灿提供）</figcaption></figure>
+<figure id="attachment_11442883" aria-describedby="caption-attachment-11442883" style="width: 334px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/396336.jpg"><img class=" wp-image-11442883" src="https://i.epochtimes.com/assets/uploads/2019/08/396336-267x400.jpg" alt="" width="334" b="500" /></a><figcaption id="caption-attachment-11442883" class="wp-caption-text">渔民正忙着为经过清洗的文蛤装袋 。（李宗灿提供）</figcaption></figure>
 <p>农业处张鸿猷处长指出，产销履历如同农产品的身份证，透过严谨的生产管理模式、资讯的公开及可追溯性，期盼有更多农友加入产销履历的行列，让消费者可以安心消费及安全享用，希望民众能够多加支持采购安全优质的云林农产品。</p>
 <p>责任编辑：林勤芝</p>
 
@@ -26,42 +26,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/7/19/n11395827.md#1">崁顶稻米达人出炉 曾民龙进军全国赛</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/7/19/n11395808.md#1">崁顶稻米达人出炉 曾民龙进军全国赛</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/6/17/n11327678.md#1">产销履历生产过程透明 消费者购买安心</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/6/13/n11319904.md#1">彰化水果盛产 品尝“百果园”新鲜滋味</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/6/11/n11315001.md#1">吉园圃升级产销履历 每公顷补助1.5万元</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/6/6/n11305275.md#1">流行食事 不可不知</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/6/n11305275.md#1">流行食事 不可不知</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/11/n11315001.md#1">吉园圃升级产销履历 每公顷补助1.5万元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/13/n11319904.md#1">彰化水果盛产 品尝“百果园”新鲜滋味</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/17/n11327678.md#1">产销履历生产过程透明 消费者购买安心</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/19/n11395808.md#1">崁顶稻米达人出炉 曾民龙进军全国赛</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/19/n11395827.md#1">崁顶稻米达人出炉 曾民龙进军全国赛</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616161.md#1">乐龄生活无限好 崙背乡老人会举办成果展</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615323.md#1">111学年度大学学测 国立嘉义高中成绩亮眼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614031.md#1">屏东挖眼嫌 裁定续押居民松口气</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613827.md#1">和平与主权不应被侵犯 嘉县点灯声援乌克兰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242732.md#1" target="_blank">【征文】张东园：孔子为什么不是无神论？</a></li><li><a href="https://github.com/jmzkba221/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/1/n10448635.md#1" target="_blank">林辉：上书毛反对土改 农学家慧眼识中共</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11941189.md#1">【一线采访视频版】武汉市民：首先要活下来</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jmzkba221/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jmzkba221/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/9/n11441833.htm">108年产销履历达人出炉 云林三人获选</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/9/n11441833.htm">2019年产销履历达人出炉 云林三人获选</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jmzkba221/djy/blob/master/gb/19/8/9/n11441833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jmzkba221/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jmzkba221/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/8/9/n11441833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
